IF (GFAST_USE_AMQ)
ADD_SUBDIRECTORY(activeMQ)
ENDIF()
ADD_SUBDIRECTORY(core)
ADD_SUBDIRECTORY(eewUtils)
ADD_SUBDIRECTORY(hdf5)
ADD_SUBDIRECTORY(traceBuffer)
ADD_SUBDIRECTORY(xml)
IF (UW_AMAZON)
ADD_SUBDIRECTORY(debug)
ADD_SUBDIRECTORY(uw)
ENDIF()

#gfast.cpp
#gfast_eew.c
#gfast_playback.c
#traceBuffer
#uw
#xml
